Fix: Drag&Drop text question - items are not visible while dragging (#394)

--- a/css/main.less
+++ b/css/main.less
@@ -110,6 +110,7 @@ ul {
 .ui-draggable-dragging,
 .gu-mirror {
     .cursor-grabbing;
+    z-index: 10;
 }
 
 .unselectable {
